fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,10 @@ button:active {
   border: 0;
 }
 
+.weather__key:first-child {
+margin-top: 20px;
+}
+
 .weather__value {
   color: #fff;
   font-size: 20px;
